--- a/styles.css
+++ b/styles.css
@@ -89,18 +89,24 @@ body {
   height: auto;
 }
 
-/* Badge Section */
+
+/* One div  */
 .home-name-badge {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 10px;
   border: 1px solid #ccc;
-  padding: 8px 15px;
+  padding: 8px 30px;
   border-radius: 20px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
   background-color: white;
-  width: fit-content;
-  margin-bottom: 20px;
+  white-space: nowrap; 
+  min-width: 270px;
+  max-width: fit-content; 
+  margin: 0 auto 20px;
+  text-align: center;
+  flex-wrap: nowrap; 
 }
 
 .home-name-badge span {
@@ -109,8 +115,11 @@ body {
   background: linear-gradient(100deg, #ff7448, #ff4848 44%, #6248ff 92%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  color: #ff4848; 
 }
 
+
+/* Avatar Group */
 .avatar-group {
   display: flex;
   align-items: center;
@@ -125,6 +134,22 @@ body {
   border: 2px solid white;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
+
+/* Responsive code */
+@media (max-width: 768px) {
+  .home-name-badge {
+    padding: 10px 20px;
+    min-width: auto;
+    max-width: 90%; 
+  }
+
+  .avatar-group img {
+    width: 22px; 
+    height: 22px;
+    margin-left: -6px;
+  }
+}
+
 
 /* Features */
 .feature {
@@ -152,11 +177,11 @@ body {
   .content {
     max-width: 100%;
   }
-
+/* 
   .image-container img {
     width: 80%;
     margin: auto;
-  }
+  } */
 }
 
 @media (max-width: 768px) {
