--- a/styles.css
+++ b/styles.css
@@ -99,12 +99,12 @@ body {
   border-radius: 20px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
   background-color: white;
-  white-space: nowrap; /* Prevents text from wrapping */
-  min-width: 270px; /* Adjust as needed */
-  max-width: fit-content; /* Keeps it from stretching too much */
+  white-space: nowrap; 
+  min-width: 270px; 
+  max-width: fit-content; 
   margin: 0 auto 20px;
   text-align: center;
-  flex-wrap: nowrap; /* Ensures everything stays in one line */
+  flex-wrap: nowrap; 
 }
 
 .home-name-badge span {
@@ -132,7 +132,7 @@ body {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-/* Responsive adjustments for mobile devices */
+/* Responsive */
 @media (max-width: 768px) {
   .home-name-badge {
     padding: 10px 20px;
