--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,14 @@ body {
   align-items: center;
   font-size: 24px;
   font-weight: bold;
+
 }
 
 .logo img {
   width: 40px;
   height: 40px;
   margin-right: 10px;
+  border-radius: 20px;
 }
 
 .nav-links {
@@ -56,7 +58,6 @@ body {
   color: #ffcc00;
 }
 
-/* Responsive Navbar */
 .menu-icon {
   display: none;
   font-size: 28px;
@@ -145,9 +146,7 @@ body {
   .avatar-group img:first-child {
     margin-left: 0; 
 }
-
 }
-
 
 /* Features */
 .feature {
